--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,16 +20,17 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/root_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/fragment"
-                android:name="com.hl.rollingbaby.ui.StatusFragment"
-                tools:layout="@layout/fragment_status"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
+                <!--xmlns:tools="http://schemas.android.com/tools"-->
+                <!--android:id="@+id/status_fragment"-->
+                <!--android:name="com.hl.rollingbaby.ui.StatusFragment"-->
+                <!--tools:layout="@layout/fragment_status"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent" />-->
 
     </ScrollView>
 
