--- a/app/src/main/res/layout/activity_humidity.xml
+++ b/app/src/main/res/layout/activity_humidity.xml
@@ -1,5 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
     android:name="com.hl.rollingbaby.ui.HumidityFragment"
-    tools:layout="@layout/fragment_humidity" android:layout_width="match_parent"
+    tools:layout="@layout/fragment_humidity"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
