--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -1,5 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/temperature_fragment"
     android:name="com.hl.rollingbaby.ui.TemperatureFragment"
-    tools:layout="@layout/fragment_temperature" android:layout_width="match_parent"
+    tools:layout="@layout/fragment_temperature"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
