Using IntentService to process data to SharedPreferences file, and use singleton Fragment to commit with Activity, the UI display success

--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -1,7 +1,10 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/temperature_fragment"
-    android:name="com.hl.rollingbaby.ui.TemperatureFragment"
-    tools:layout="@layout/fragment_temperature"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/temperature_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
+
+
+
+
