--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -6,6 +6,14 @@
     android:padding="16dp"
     tools:context="com.hl.rollingbaby.ui.StatusFragment" >
 
+    <TextView
+        android:text="HELLO WORLD"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
     <it.gmariotti.cardslib.library.view.CardViewNative
         android:id="@+id/carddemo"
         android:layout_marginLeft="24dp"
