--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:id="@+id/header"
-        android:text="@string/hello_world"
+        android:text="@string/action_sync"
         android:layout_marginLeft="50dp"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
