--- a/app/src/main/res/layout/fragment_sound.xml
+++ b/app/src/main/res/layout/fragment_sound.xml
@@ -54,15 +54,28 @@
                 android:layout_weight="1"/>
         </LinearLayout>
 
-        <SeekBar
-            android:id="@+id/seek_bar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:progress="61"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_horizontal">
+
+            <SeekBar
+                android:id="@+id/seek_bar"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:progress="61"
+                android:indeterminate="false" />
+
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/mode_switch"
+                android:checked="false" />
+
+        </LinearLayout>
+
 
     </it.gmariotti.cardslib.library.view.CardViewNative>
 
