--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="smallCircleColor">#FFDF8D81</color>
     <color name="largeCircleColor">#FFAF3854</color>
     <color name="outerCircleColor">#FF533456</color>
+    <color name="awesome_blue">#ff3498db</color>
 </resources>
 
