--- a/app/src/main/res/layout/fragment_sound_dialog.xml
+++ b/app/src/main/res/layout/fragment_sound_dialog.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="30dp"
+        android:layout_marginTop="150dp"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
@@ -52,7 +52,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:src="@drawable/rewind" />
+                android:src="@drawable/rewind_bt_50" />
 
             <ImageButton
                 android:id="@+id/play"
@@ -67,7 +67,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:src="@drawable/forward" />
+                android:src="@drawable/forward_bt_50" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -90,6 +91,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false" />
+
+            <!--<ImageButton-->
+                <!--android:id="@+id/status_changer"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@color/white"-->
+                <!--android:src="@drawable/music_blue_50" />-->
+
 
         </LinearLayout>
 
