--- a/app/src/main/res/layout/fragment_temperature_dialog.xml
+++ b/app/src/main/res/layout/fragment_temperature_dialog.xml
@@ -5,27 +5,42 @@
     android:orientation="vertical"
     tools:context="com.hl.rollingbaby.ui.TemperatureDialogFragment">
 
-    <TextView
-        android:id="@+id/current_temperature"
+    <LinearLayout
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="20sp"  />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/setting_temperature"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/current_temperature"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/heating_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"  />
+
+        <TextView
+            android:id="@+id/setting_temperature"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="25sp" />
+
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/temperature_seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:max="25" />
 
 </LinearLayout>
