--- a/app/src/main/res/layout/fragment_swing_dialog.xml
+++ b/app/src/main/res/layout/fragment_swing_dialog.xml
@@ -4,9 +4,11 @@
 
     <TextView
         android:id="@+id/tx"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:background="@color/blue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="23sp"
+        android:layout_gravity="center"
         android:gravity="center"/>
 
 </FrameLayout>
