--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.race604.flyrefresh.FlyRefreshLayout
@@ -14,7 +13,8 @@
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="48dp"
+            android:paddingTop="24dp"
+            android:paddingLeft="48dp"
             android:background="#FFFFFF"/>
     </com.race604.flyrefresh.FlyRefreshLayout>
 
