--- a/app/src/main/res/layout/fragment_temperature_dialog.xml
+++ b/app/src/main/res/layout/fragment_temperature_dialog.xml
@@ -1,37 +1,87 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@android:color/darker_gray"
     tools:context="com.hl.rollingbaby.ui.TemperatureDialogFragment">
 
-    <LinearLayout
-        android:layout_margin="10dp"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/current_temperature"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="25sp" />
+        android:layout_weight="1">
 
         <ImageView
             android:id="@+id/heating_icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"  />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="24dp"
+            android:scaleType="centerCrop" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:orientation="horizontal">
 
         <TextView
+            style="@style/comText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="state : "  />
+
+        <TextView
+            style="@style/comText"
+            android:id="@+id/heating_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp">
+
+        <TextView
+            style="@style/comText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Setting : " />
+
+        <TextView
+            style="@style/comText"
             android:id="@+id/setting_temperature"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="25sp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:text="34" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp">
+
+        <TextView
+            style="@style/comText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current : " />
+
+        <TextView
+            style="@style/comText"
+            android:id="@+id/current_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:text="28" />
 
     </LinearLayout>
 
@@ -39,8 +89,6 @@
         android:id="@+id/temperature_seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:max="25" />
+        android:max="15" />
 
 </LinearLayout>
