--- a/app/src/main/res/layout/fragment_temperature_dialog.xml
+++ b/app/src/main/res/layout/fragment_temperature_dialog.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@android:color/darker_gray"
     tools:context="com.hl.rollingbaby.ui.TemperatureDialogFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="#9fd6ca">
 
         <ImageView
             android:id="@+id/heating_icon"
@@ -33,11 +34,11 @@
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="state : "  />
+            android:text="@string/temperature_state" />
 
         <TextView
-            style="@style/comText"
             android:id="@+id/heating_state"
+            style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -52,15 +53,14 @@
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Setting : " />
+            android:text="@string/setting_temperature" />
 
         <TextView
-            style="@style/comText"
             android:id="@+id/setting_temperature"
+            style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start|center_vertical"
-            android:text="34" />
+            android:gravity="start|center_vertical" />
 
     </LinearLayout>
 
@@ -73,15 +73,14 @@
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current : " />
+            android:text="@string/current_temperature" />
 
         <TextView
-            style="@style/comText"
             android:id="@+id/current_temperature"
+            style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start|center_vertical"
-            android:text="28" />
+            android:gravity="start|center_vertical" />
 
     </LinearLayout>
 
