--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
     </style>
     
     <style name="comText">
-        <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAppearance">?attr/showText</item>
         <item name="android:paddingLeft">32dp</item>
