--- a/app/src/main/res/layout/fragment_sound_dialog.xml
+++ b/app/src/main/res/layout/fragment_sound_dialog.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
@@ -51,6 +51,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:scaleType="center"
                 android:background="@color/white"
                 android:src="@drawable/rewind_bt_50" />
 
