--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,21 @@
         <item name="colorPrimaryDark">#0097A7</item>
         <item name="colorAccent">#61B3DD</item>
     </style>
-    
+
+    <style name="Theme.Settings" parent="@style/AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+
+        <item name="toolbarStyle">@style/Widget.Toolbar</item>
+    </style>
+
+
+    <style name="Widget.Toolbar" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="android:background">#9fd6ca</item>
+        <item name="android:navigationIcon">?attr/homeAsUpIndicator</item>
+        <item name="navigationIcon">?attr/homeAsUpIndicator</item>
+    </style>
+
     <style name="comText">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@android:color/darker_gray</item>
