--- a/app/src/main/res/layout/fragment_temperature_dialog.xml
+++ b/app/src/main/res/layout/fragment_temperature_dialog.xml
@@ -15,7 +15,7 @@
         android:background="#9fd6ca">
 
         <ImageView
-            android:id="@+id/heating_icon"
+            android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -48,7 +48,7 @@
             android:text="@string/temperature_state" />
 
         <TextView
-            android:id="@+id/heating_state"
+            android:id="@+id/state"
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -67,7 +67,7 @@
             android:text="@string/setting_temperature" />
 
         <TextView
-            android:id="@+id/setting_temperature"
+            android:id="@+id/setting"
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,7 +87,7 @@
             android:text="@string/current_temperature" />
 
         <TextView
-            android:id="@+id/current_temperature"
+            android:id="@+id/current"
             style="@style/comText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
     </LinearLayout>
 
     <SeekBar
-        android:id="@+id/temperature_seekBar"
+        android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="15" />
