--- a/app/src/main/res/layout/fragment_sound_dialog.xml
+++ b/app/src/main/res/layout/fragment_sound_dialog.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
+    android:id="@+id/sound_root"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_gravity="center"
