--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,11 @@
         <item name="android:textAppearance">?attr/showText</item>
         <item name="android:paddingLeft">32dp</item>
     </style>
+    
+    <style name="DialogAnimation" >
+        <item name="android:windowEnterAnimation">@anim/dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_out</item>
+    </style>
 
 
 </resources>
