--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -8,7 +8,7 @@
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:summary="@string/summary_default"
+        android:summary="%s"
         android:title="@string/IP_ADDRESS_PORT" />
 
 
